# BDEV-physics-engin

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Renderer.cpp.D3D9116C9674BDC7.idx  Renderer.hpp.7639A6332CC43135.idx  main.cpp.0C36288BFEA96A3A.idx
include/: Entity.hpp  EntityVisual.hpp  PhysicsBody.hpp  PhysicsEngin.hpp  QuadTree.hpp  Renderer.hpp  Scene.hpp  Vector2D.hpp
src/: Entity.cpp  EntityVisual.cpp  PhysicsBody.cpp  PhysicsEngin.cpp  Renderer.cpp  Scene.cpp  Vector2D.cpp  main.cpp
